2025-06-14

- Made DEFAULT render theme first theme in list of available render themes
- Up/Down key and mouse wheel in server task entry field
  now allows scrolling through available tasks
- Added support for Marlin-renderer for JDK17+

2025-04-29

- Removed no longer existing internal render theme "MOTORIDER_DARK",
  added new internal render theme "BIKER" instead
  (server version >= 0.25.0.0)

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties" 

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely
- Suppressed meaningless SLF4J information output
- Removed work around to remove remaining temporary Tcl folder
  as Tcl bug was fixed in recent Tcl versions.
- Updated README

2025-01-28

- Now showing Tcl/Tk version and script release date in output console
- Improved tooltips for multiple server tasks configuration
- Added tooltip to maps selection
- Now accepting uppercase layer ids theme file
- Now accepting quoted unicode characters in theme file
- Updated README hints

2025-01-20

- Improved compatibility between script and running MyToorbook
  for Java distributions from
  o Adoptium (https://adoptium.net)
  o OpenJDK (https://openjdk.org)
- Improved input handling of number values
- Changed hillshading parameter text to Mapsforge notation
- Added fast adaptive hillshading "adaptasy" (server version >= 0.23.0.1)
- Added optional parameters for minimum and maximum hillshading zoom level
  to allow overriding built-in hillshading zoom levels
  (server version >= 0.23.0.2)

2024-12-31

- Initial commit supporting only new "multiple tasks" server type
- Dropped support of old "single task" server type
- Dropped support of Java version < 11
- Added support of multiple concurrent server tasks