@@ -18,9 +18,9 @@ i01	"Erforderliche Benutzereinstellungen fehlen,\nDatei '%s' nicht gefunden"
 l01	"Mapsforge für MyTourbook"
 
 l02	"Server-Task(s)"
-l02t	"Konfiguriere den angezeigten Task oder\nerzeuge einen neuen und drücke die Return-Taste.\nGültige Zeichen für Tasknamen: A-Za-z0-9_.+-"
+l02t	"Konfiguriere den angezeigten Task oder\nerzeuge einen neuen und drücke die Return-Taste.\nGültige Zeichen für Tasknamen: A-Za-z0-9_.+-\nWähle den zu konfigurierenden Task\nmit den Tasten AUF oder AB oder dem Mausrad."
 l02e	"Taskname '%s' ungültig"
-l03t	"Schalte Server-Tasks mit Maustaste 1 ein oder aus.\nMarkiere den Task zum Konfigurieren oder Löschen mit Tasten AUF und AB.\nLösche den markierten Task mit Taste ENTF.\nDer Default-Task ist immer eingeschaltet und kann nicht gelöscht werden."
+l03t	"Schalte Server-Tasks mit der Maustaste 1 ein oder aus.\nWähle den Task zum Konfigurieren oder Löschen mit Tasten AUF oder AB.\nLösche den gewählten Task mit Taste ENTF.\nDer Default-Task ist immer eingeschaltet und kann nicht gelöscht werden."
 
 l11	"Bevorzugte Mapsforge-Kartensprache"
 l11t	"2 Kleinbuchstaben ISO 639-1 Code\nUnterstützte Kartensprachen siehe Ausgabe-Konsole"
@@ -45,6 +45,7 @@ c01	"Overlays zum Stil auswählen"
 c02	"Schummerung konfigurieren"
 c03	"Skalierung & Farben"
 c04	"Server konfigurieren"
+c05	"MyTourbook konfigurieren"
 
 s01	"Skalierbare Kartenelemente skalieren"
 s02	"Alle Elemente"
@@ -67,6 +68,12 @@ x13	"Netzwerk-Interface(s)"
 x15	"TCP-Port"
 x16	"Größe der TCP-Accept-Queue"
 x19	"Logging von Server-Requests"
+
+y01	"MyTourbook Skalierung"
+y01t	"Erfordert MyTourbook Version 25.8.0 oder neuer"
+y02	"Keine Skalierung"
+y03	"Hauptbildschirm Skalierung"
+y04	"Benutzerdefinierte Skalierung"
 
 b01	"Starten"
 b01t	"2D-Karte 'MapsforgeMap' in MyTourbook\naktivieren. Nach Änderung von Einstellungen\ndiesen Knopf 'Starten' erneut drücken,\ndann 2D-Karte in MyTourbook rechtsklicken und\n'Fehlerhafte Karten Bilder nochmals laden'!\nDoppelklick erzwingt einen Serverneustart."
