@@ -18,9 +18,9 @@ i01	"Mandatory user settings missing,\nfile '%s' not found"
 l01	"Mapsforge for MyTourbook"
 
 l02	"Server task(s)"
-l02t	"Configure the displayed task or\ncreate a new one and hit Return key.\nValid task name characters: A-Za-z0.9_.+-"
+l02t	"Configure the displayed task or\ncreate a new one and hit Return key.\nValid task name characters: A-Za-z0.9_.+-\nSelect task to configure\nusing keys UP or DOWN or mouse wheel."
 l02e	"Task name '%s' invalid"
-l03t	"Use mouse button 1 to turn server tasks on or off.\nUse keys UP or DOWN and mark task to configure or delete.\nUse DEL key to delete marked task from configuration.\nThe default task is always selected and cannot be deleted."
+l03t	"Use mouse button 1 to turn server tasks on or off.\nSelect task to configure or delete using keys UP or DOWN.\nUse key DEL to delete selected task from configuration.\nThe default task is always turned on and cannot be deleted."
 
 l11	"Preferred Mapsforge maps language"
 l11t	"2 lowercase letters ISO 639-1 code\nSee output console for supported map languages"
@@ -45,6 +45,7 @@ c01	"Select overlays for style"
 c02	"Configure hillshading"
 c03	"Scaling & colors"
 c04	"Configure server"
+c05	"Configure MyTourbook"
 
 s01	"Scaling of scalable map elements"
 s02	"All elements"
@@ -67,6 +68,12 @@ x13	"Network interface(s)"
 x15	"TCP port"
 x16	"TCP accept queue size"
 x19	"Logging of server requests"
+
+y01	"MyTourbook scaling"
+y01t	"Requires MyTourbook version 25.8.0 or newer"
+y02	"No scaling"
+y03	"Primary display scaling"
+y04	"User-defined scaling"
 
 b01	"Start"
 b01t	"Activate 2D map 'MapsforgeMap' in\nMyTourbook. After changing settings\npress this 'Start' button again,\nthen right-click MyTourbook's 2D map\nand 'Reload Failed Map Images'!\nDouble click forces a server restart."
