@@ -1,3 +1,13 @@
+2025-08-20
+
+- Modified console output to avoid console potentially
+  freezing and becoming unresponsable to keyboard/mouse
+  due to being flooded
+- Added scrollbar if list of server tasks is longer than 5 tasks
+- Added new MyTourbook settings menu to allow MyTourbook scaling
+- MyTourbook now requires Java 21 or newer
+- Updated README
+
 2025-06-14
 
 - Made DEFAULT render theme first theme in list of available render themes
